# ssdp

./: .gitignore  CHANGELOG.md  README.md  conv.py  main.py  pyproject.toml
ssdp/: __init__.py  cli.py  main.py
ssdp/commands/: __init__.py  conv.py  diff.py  diff_plain.py  view.py  view_plain.py
ssdp/core/: __init__.py  diff_engine.py  errors.py  io.py  mifare.py  mifare_value.py  render.py  render_units.py  types.py  xxd.py
ssdp/utils/: __init__.py  bytestr.py  cli.py
tests/: __init__.py  test_commands.py  test_core_diff_engine.py  test_core_mifare.py  test_core_mifare_value.py  test_utils_bytestr.py
